--- a/app/src/main/assets/HTMLFiles/index.html
+++ b/app/src/main/assets/HTMLFiles/index.html
@@ -178,6 +178,8 @@
                 </li>
                 <li role="presentation"><a href="#ipc" aria-controls="ipc" role="tab" data-toggle="tab">IPC</a>
                 </li>
+                <li role="presentation"><a href="#userHooks" aria-controls="userHooks" role="tab" data-toggle="tab">+ Hooks</a>
+                </li>
 
             </ul>
 
@@ -474,6 +476,19 @@
 
                 <div role="tabpanel" class="tab-pane fade" id="misc">
                         <div id="misc1"></div>
+                </div>
+
+                <div role="tabpanel" class="tab-pane fade" id="userHooks">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#myModal4">
+                                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Manage new hooks
+                            </button>
+                        </div>
+                        <div class="panel-body">
+                            <div id="userhooks1"></div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -858,16 +873,95 @@ sudo iptables -t nat -A PREROUTING -p tcp -d TARGET_HOST --dport 443 -j REDIRECT
 </div>
 <!--modal4-->
 
+<!--Modal5-->
+<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="modalLabel">Create Hooks</h4>
+            </div>
+            <div class="modal-body">
+
+                <div class="container-fluid">
+
+                    <div class="row">
+                        <div class="bootstrap-iso">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <div class="form-horizontal">
+                                            <div class="form-group form-group-sm">
+                                                <label class="control-label col-sm-2" for="className">Class</label>
+                                                <div class="col-sm-10">
+                                                    <input class="form-control" id="className" name="className" placeholder="com.package.className" type="text" />
+                                                </div>
+                                            </div>
+                                            <div class="form-group form-group-sm">
+                                                <label class="control-label col-sm-2" for="method">Method</label>
+                                                <div class="col-sm-10">
+                                                    <div class="input-group">
+                                                        <input class="form-control" id="method" name="method" placeholder="method" type="text" />
+                                                            <span class="input-group-addon">
+                                                            <input type="checkbox" id="hookConstructor"> Hook constructors too?
+                                                            </span>
+                                                    </div>
+                                                        <span class="help-block" id="hint_method">
+                                                        leave blank for all
+                                                        </span>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="col-sm-10 col-sm-offset-10">
+                                                    <button class="btn btn-primary btn-sm" name="submit" onclick="addHook()">
+                                                        Add hook
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /#row top -->
+                    <hr />
+                    <div id="list" class="row">
+                        <div class="table-responsive col-md-12">
+                            <table id='hook-table' class="table table-striped" cellspacing="0" cellpadding="0">
+                                <thead>
+                                <tr>
+                                    <th>className</th>
+                                    <th>method</th>
+                                    <th>constructor</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <!-- /#list -->
+                </div>
+                <!-- /#main -->
+            </div>
+        </div>
+        <div class="modal-footer">
+        </div>
+    </div>
+</div>
+<!--Modal5-->
+
 </div>
 
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-switch.js"></script>
-<script src="js/jquery-1.10.2.js"></script>
-<script src="js/jquery-ui.js"></script>
 <script src="js/base.js"></script>
 <script src="js/CollapsibleLists.compressed.js"></script>
+<script src="js/jquery.tabletojson.min.js"></script>
+
 </body>
 
 </html>
