--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Inspeckage</h1>
-        <h2>Android Package Inspector</h2>
+        <img src="brand.svg" width="500">
+        <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Android Package Inspector</h2>
         <a href="https://github.com/ac-pm/Inspeckage" class="button"><small>View project on</small> GitHub</a>
       </div>
       
