--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ footer {
 <ul>
 <li><a href="https://twitter.com/inspeckage">https://twitter.com/inspeckage</a></li>
 <li><a href="https://play.google.com/store/apps/details?id=mobi.acpm.inspeckage">https://play.google.com/store/apps/details?id=mobi.acpm.inspeckage</a></li>
+<li><a href="http://repo.xposed.info/module/mobi.acpm.inspeckage">http://repo.xposed.info/module/mobi.acpm.inspeckage</a></li>
 </ul>
 
 <h4>Ways to Contribute</h4>
