--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@ footer {
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+          
+          <h3>
+<a id="the-project" class="anchor" href="#the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>V2.2 Available!</h3>
+
+<ul>
+<li><a href="https://github.com/ac-pm/Inspeckage/releases">https://github.com/ac-pm/Inspeckage/releases</a></li>
+<li><a href="https://play.google.com/store/apps/details?id=mobi.acpm.inspeckage">https://play.google.com/store/apps/details?id=mobi.acpm.inspeckage</a></li>
+<li><a href="http://repo.xposed.info/module/mobi.acpm.inspeckage">http://repo.xposed.info/module/mobi.acpm.inspeckage</a></li>
+</ul>
+          
           <h3>
 <a id="the-project" class="anchor" href="#the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Project</h3>
 
@@ -45,8 +55,6 @@ footer {
 
 <ul>
 <li><a href="https://twitter.com/inspeckage">https://twitter.com/inspeckage</a></li>
-<li><a href="https://play.google.com/store/apps/details?id=mobi.acpm.inspeckage">https://play.google.com/store/apps/details?id=mobi.acpm.inspeckage</a></li>
-<li><a href="http://repo.xposed.info/module/mobi.acpm.inspeckage">http://repo.xposed.info/module/mobi.acpm.inspeckage</a></li>
 </ul>
 
 <h4>Ways to Contribute</h4>
