--- a/app/src/main/assets/HTMLFiles/index.html
+++ b/app/src/main/assets/HTMLFiles/index.html
@@ -75,12 +75,12 @@
             <li>
                 <a href="#" id="nav_replaces"><i class="fa fa-fw fa-exchange"></i> Replaces</a>
             </li>
-            <!--
+
                         <li>
                             <a href="#" id="nav_location"><i class="fa fa-fw fa-location-arrow"></i> Location</a>
-                        </li>-->
+                        </li>
                         <li>
-                            <a href="#" id="nav_config"><i class="fa fa-fw fa-cogs"></i> Build</a>
+                            <a href="#" id="nav_config"><i class="fa fa-fw fa-cogs"></i> Fingerprint</a>
                         </li>
 
             <li>
@@ -743,21 +743,21 @@ sudo iptables -t nat -A PREROUTING -p tcp -d TARGET_HOST --dport 443 -j REDIRECT
 
 </div>
 
+<script src="js/jquery.min.js?v=1"></script>
+<script src="js/bootstrap.min.js?v=1"></script>
+<script src="js/bootstrap-switch.js?v=1"></script>
+<script src="js/base.js?v=1"></script>
+<script src="js/tabs.js?v=1"></script>
+<script src="js/CollapsibleLists.compressed.js?v=1"></script>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/bootstrap-switch.js"></script>
-<script src="js/base.js"></script>
-<script src="js/tabs.js"></script>
-<script src="js/CollapsibleLists.compressed.js"></script>
+<script src="js/jstree.min.js?v=1"></script>
 
-<script src="js/jstree.min.js"></script>
-<script src="js/menu.js"></script>
-<script src="js/bootstrap-table.min.js"></script>
-<script src="js/plushooks.js"></script>
-<script src="js/bootstrap-editable.min.js"></script>
-<script src="js/bootstrap-table-editable.min.js"></script>
+<script src="js/bootstrap-table.min.js?v=1"></script>
+<script src="js/plushooks.js?v=1"></script>
+<script src="js/bootstrap-editable.min.js?v=1"></script>
+<script src="js/bootstrap-table-editable.min.js?v=1"></script>
 
+<script src="js/menu.js?v=1"></script>
 <script>
 
 $('#jstree-classes').on("changed.jstree", function(e, data) {
