device fingerprint menu (v2.3)

--- a/app/src/main/assets/HTMLFiles/content/fingerprint.html
+++ b/app/src/main/assets/HTMLFiles/content/fingerprint.html
@@ -1,5 +1,13 @@
 <div class="container-fluid">
-    <legend>Change the current device Fingerprint</legend>
+    <legend>
+        Change the current device Fingerprint
+        <form>
+        <div class="form-group">
+            <button type="button" onclick="resetFingerprint();" class="btn btn-default pull-right">Reset</button>
+        </div>
+        </form>
+    </legend>
+
     <table id="tableBuild"></table>
 </div>
 
