--- a/app/src/main/assets/HTMLFiles/content/fingerprint.html
+++ b/app/src/main/assets/HTMLFiles/content/fingerprint.html
@@ -1,14 +1,13 @@
 <div class="container-fluid">
     <legend>
         Change the current device Fingerprint
-        <form>
-        <div class="form-group">
-            <button type="button" onclick="resetFingerprint();" class="btn btn-default pull-right">Reset</button>
-        </div>
-        </form>
     </legend>
-
-    <table id="tableBuild"></table>
+    <div id="toolbar" class="btn-group">
+        <button type="button" onclick="resetFingerprint();" class="btn btn-default">
+            <i class="glyphicon glyphicon-refresh"></i>
+        </button>
+     </div>
+    <table id="tableBuild" data-show-toggle="true" data-toolbar="#toolbar"></table>
 </div>
 
 <script src="js/fingerprint.js"></script>
