--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ footer {
         <section id="main-content">
           
           <h3>
-<a id="the-project" class="anchor" href="#the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>V2.2 Available!</h3>
+<a id="the-project" class="anchor" href="#the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>V2.3 Available!</h3>
 
 <ul>
 <li><a href="https://github.com/ac-pm/Inspeckage/releases">https://github.com/ac-pm/Inspeckage/releases</a></li>
@@ -51,7 +51,7 @@ footer {
           <h3>
 <a id="the-project" class="anchor" href="#the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Project</h3>
 
-<p>Inspeckage is a tool developed to offer dynamic analysis of Android applications. By applying hooks to functions of the Android API, Inspeckage will help you understand what an Android application is doing at runtime. </p>
+<p>With more than 30 features, Inspeckage is a all-in-one tool developed to offer dynamic analysis of Android applications. Create hooks at runtime, enable pre-defined hooks and more. This tool will help you understand what an Android application is doing at runtime.</p>
 
 <ul>
 <li><a href="https://twitter.com/inspeckage">https://twitter.com/inspeckage</a></li>
